updated api spec to include new endpoint, updated compliance endpoint to return status code that compliance service returns
