# apispec/api.spec.json
@@ -59,6 +59,66 @@
                     }
                 }
             }
+        },
+        "/compliance": {
+            "get": {
+                "tags": [
+                    "services"
+                ],
+                "summary": "verify exports compliance for a given user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ComplianceScreeningResponse"
+                                },
+                                "examples": {
+                                    "sample1": {
+                                        "value": {
+                                            "result": "OK",
+                                            "description": ""
+                                        },
+                                        "description": "User is compliant."
+                                    },
+                                    "sample2": {
+                                        "value": {
+                                            "result": "ERROR_EXPORT_CONTROL",
+                                            "description": "Your account appears to be on Export Hold. Please review the information at the following link for more detail: https://access.redhat.com/articles/1340183"
+                                        },
+                                        "description": "User is not compliant."
+                                    },
+                                    "sample3": {
+                                        "value": {
+                                            "result": "ERROR_OFAC",
+                                            "description": "Your order cannot be processed because your email address indicates that you are located in a country subject to sanctions implemented by the US Department of Treasury, Office of Foreign Assets Control (\"OFAC\"). Red Hat products are not authorized for export to your country at this time and we are prohibited from processing your order.\nFurther detail can be found here:\nhttp://www.treasury.gov/resource-center/sanctions/programs"
+                                        },
+                                        "description": "User is not compliant."
+                                    },
+                                    "sample4": {
+                                        "value": {
+                                            "result": "ERROR_T5",
+                                            "description": "Your order cannot be processed because your address indicates that you are located in a country subject to sanctions implemented by the US Department of Treasury, Office of Foreign Assets Control (\"OFAC\"). Red Hat products are not authorized for export to your country at this time and we are prohibited from processing your order.\nFurther detail can be found here:\nhttp://www.treasury.gov/resource-center/sanctions/programs"
+                                        },
+                                        "description": "User is not compliant."
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ComplianceScreeningErrorResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
@@ -98,6 +158,48 @@
                         "is_entitled": false,
                         "is_trial": true
                     }
+                }
+            },
+            "ComplianceScreeningResponse": {
+                "type": "object",
+                "properties": {
+                    "result": {
+                        "type": "string",
+                        "enum": ["OK", "ERROR_T5", "ERROR_OFAC", "ERROR_EXPORT_CONTROL"]
+                    },
+                    "description": {
+                        "type": "string",
+                        "default": null
+                    }
+                },
+                "example":
+                    {
+                        "result": "OK",
+                        "description": ""
+                    }
+            },
+            "ComplianceScreeningErrorResponse": {
+                "type": "object",
+                "properties": {
+                    "errors": {
+                        "type": "array",
+                        "items": {
+                            "properties": {
+                                "error": {"type": "string"},
+                                "identityType": {"type": "string"},
+                                "identity": {"type": "string"}
+                            }
+                        }
+                    }
+                },
+                "example": {
+                    "errors": [
+                        {
+                            "error": "no_such_user",
+                            "identityType": "login",
+                            "identity": "test232342@redhat.com"
+                        }
+                    ]
                 }
             }
         }
